--- a/css/layout.css
+++ b/css/layout.css
@@ -4,7 +4,7 @@
 }
 
 * {margin:0px;padding:0px;}
-header {background-image:url("file:///home/ray/repositories/NoorInstituteOfTechnology/noorinstituteoftechnology.github.io/assets/Pictures/headerBG.jpg");background-size:cover;height:100vh;width:100vw;color:white;display:flex;flex-flow:column nowrap;position:fixed;top:0px;left:0px;justify-content:space-between;align-items:center;}
+header {background-image:url("https://raw.githubusercontent.com/noorinstituteoftechnology/noorinstituteoftechnology.github.io/main/assets/Pictures/headerBG.jpg");background-size:cover;height:100vh;width:100vw;color:white;display:flex;flex-flow:column nowrap;position:fixed;top:0px;left:0px;justify-content:space-between;align-items:center;}
 #topToolBar {height:1.5vh;padding:10px;display:flex;flex-flow:row nowrap;justify-content:space-between;width:98vw;}
 #topToolBar > a {font-size:1.5vh;}
 header > h1 {font-size:3rem;text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;font-style:oblique 10deg;}
@@ -14,9 +14,8 @@ header > h2 {font-size:2rem;text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px
 #news {background-color:#df1919;}
 #courseNews {background-color:#efdf19;color:#191919;}
 
-main {background-image:url("file:///home/ray/repositories/NoorInstituteOfTechnology/noorinstituteoftechnology.github.io/assets/mainBG.svg");background-size:cover;height:800vh;color:white;display:flex;flex-flow:column nowrap;position:relative;top:60vh;align-items:center;}
+main {background-image:url("https://raw.githubusercontent.com/noorinstituteoftechnology/noorinstituteoftechnology.github.io/main/assets/mainBG.svg");background-size:cover;height:800vh;color:white;display:flex;flex-flow:column nowrap;position:relative;top:60vh;align-items:center;}
 main > h1 {margin:50vh;font-size:1.8rem;white-space:nowrap;}
 
-footer {background-image:url("file:///home/ray/repositories/NoorInstituteOfTechnology/noorinstituteoftechnology.github.io/assets/footerBG.svg");background-size:cover;height:80vh;color:white;display:flex;flex-flow:row nowrap;position:relative;top:25vh;justify-content:space-around;color:#dfdfdf;}
+footer {background-image:url("https://raw.githubusercontent.com/noorinstituteoftechnology/noorinstituteoftechnology.github.io/main/assets/footerBG.svg");background-size:cover;height:80vh;color:white;display:flex;flex-flow:row nowrap;position:relative;top:25vh;justify-content:space-around;color:#dfdfdf;}
 footer > * {margin-top:50vh;}
-
