--- a/css/layout.css
+++ b/css/layout.css
@@ -15,7 +15,7 @@ img, h1 {width:100%;}
 body {overflow-x:hidden;}
 
 header {
-	background-image:url("file:///home/ray/repositories/NoorInstituteOfTechnology/noorinstituteoftechnology.github.io/assets/Pictures/headerBG.jpg");
+	background-image:url("https://noorinstituteoftechnology.github.io/assets/Pictures/headerBG.jpg");
 background-size:cover;height:100vh;width:100vw;color:white;display:flex;flex-flow:column nowrap;position:fixed;top:0px;left:0px;justify-content:space-between;align-items:center;}
 #topToolBar {height:1.5vh;padding:10px;display:flex;flex-flow:row nowrap;justify-content:space-between;width:98vw;}
 #topToolBar > a {font-size:1.5vh;}
@@ -38,12 +38,6 @@ header > h1 {
 	text-align:center;
 	line-height:40px;
 	padding:30px;
-	/*
-	background-image:url("file:///home/ray/repositories/NoorInstituteOfTechnology/noorinstituteoftechnology.github.io/assets/Pictures/laptop-code.svg");
-	background-size:contain;
-	background-origin:content-box;
-	background-repeat:no-repeat;
-	*/
 	}
 header > h2 {font-size:1.4rem;text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;font-style:oblique 10deg;color:yellow;transform:rotate(-8deg);text-align:center;}
 #newsStrips {margin-bottom:20vh;}
@@ -51,7 +45,7 @@ header > h2 {font-size:1.4rem;text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1
 #news {background-color:#df1919;}
 #courseNews {background-color:#efdf19;color:#191919;}
 
-main {background-image:url("file:///home/ray/repositories/NoorInstituteOfTechnology/noorinstituteoftechnology.github.io/assets/mainBG.svg");background-size:cover;
+main {background-image:url("https://noorinstituteoftechnology.github.io/assets/mainBG.svg");background-size:cover;
 	height:800vh;width:100%;color:white;display:flex;flex-flow:column nowrap;position:relative;top:60vh;align-items:center;justify-content:space-between;padding:50vh 0px 50vh 0px;}
 main > section {width:90vw;color:white;display:flex;flex-flow:column nowrap;justify-content:space-between;align-items:center;height:80vh;}
 main > section > h1 {font-size:1.8rem;text-align:center;width:100vw;margin:10px;}
@@ -89,7 +83,7 @@ main > section > p {font-size:1;text-align:center;}
 }
 hr {width:100%;}
 
-footer {background-image:url("file:///home/ray/repositories/NoorInstituteOfTechnology/noorinstituteoftechnology.github.io/assets/footerBG.svg");background-size:cover;height:80vh;color:white;display:flex;flex-flow:row nowrap;position:relative;top:25vh;justify-content:space-around;color:#dfdfdf;filter:drop-shadow(-1px 0px 1px white);}
+footer {background-image:url("https://noorinstituteoftechnology.github.io/assets/footerBG.svg");background-size:cover;height:80vh;color:white;display:flex;flex-flow:row nowrap;position:relative;top:25vh;justify-content:space-around;color:#dfdfdf;filter:drop-shadow(-1px 0px 1px white);}
 footer > * {margin-top:50vh;margin-left:2vw;margin-right:2vw;}
 
 #introSection > h2 {transform:rotate(-90deg)translateX(-30vh)translateY(-35vw);}
