--- a/css/userprofile.css
+++ b/css/userprofile.css
@@ -29,7 +29,7 @@ main > article {
 	grid-template-rows:2fr 1fr;
 }
 main > article > section {height:100%;border:1px solid var(--bod);}
-#imageSec {background-image:url("noorinstituteoftechnology.github.io/assets/Pictures/museums-victoria-n1LIveUPls4-unsplash.jpg");background-size:cover;}
+#imageSec {background-image:url("https://noorinstituteoftechnology.github.io/assets/Pictures/museums-victoria-n1LIveUPls4-unsplash.jpg");background-size:cover;}
 #titleSec > h1 {font-size:4rem;margin-left:5vw;}
 #courseName {font-size:1rem;background-color:var(--bg);border:none;}
 #descpSec > p, #loginForm > label {text-indent:5vw;margin:10px;font-family:arial, serif;}
