--- a/css/userprofile.css
+++ b/css/userprofile.css
@@ -85,3 +85,4 @@ button:hover, select:hover {filter:hue-rotate(90deg);}
 #descpSec > ul {list-style:none;}
 #descpSec > ul > li {font-style:none;}
 #descpSec > ul > li > b {color:yellow;}
+#descpSec > ul > li > img {display:block;}
