--- a/css/userprofile.css
+++ b/css/userprofile.css
@@ -86,3 +86,8 @@ button:hover, select:hover {filter:hue-rotate(90deg);}
 #descpSec > ul > li {font-style:none;}
 #descpSec > ul > li > b {color:yellow;}
 #descpSec > ul > li > img {display:block;}
+#descpSec > ul > li > img:before {
+    content: "";
+    display: block;
+}
+
