tried a simpler way for new line before lesson images

--- a/css/userprofile.css
+++ b/css/userprofile.css
@@ -85,9 +85,4 @@ button:hover, select:hover {filter:hue-rotate(90deg);}
 #descpSec > ul {list-style:none;}
 #descpSec > ul > li {font-style:none;}
 #descpSec > ul > li > b {color:yellow;}
-#descpSec > ul > li > img {display:block;}
-#descpSec > ul > li > img:before {
-    content: "";
-    display: block;
-}
-
+#descpSec > ul > li > img::before { content: "\A"; white-space: pre; }
