--- a/css/userprofile.css
+++ b/css/userprofile.css
@@ -82,6 +82,36 @@ button:hover, select:hover {filter:hue-rotate(90deg);}
 }
 
 .quizBox {height:40%; width:100%;}
-#descpSec > ul {list-style:none;}
 #descpSec > * > * > b {color:yellow;}
-
+#descpSec > h1 {font-style:'Marker';}
+#descpSec > p {font-style:serif;}
+#descpSec > p > b {font-style:serif;}
+#descpSec > ul {list-style:none;}
+#descpSec > ul > li {font-style:none;}
+#descpSec > ul > li > b {color:yellow;}
+.lesson-list {margin-left:20px;}
+.pre
+{
+border: 1px solid #999;
+page-break-inside: avoid;
+display: block;
+padding: 3px 3px 2px;
+margin: 0 0 10px;
+font-size: 13px;
+line-height: 20px;
+word-break: break-all;
+word-wrap: break-word;
+/*white-space: pre;
+white-space: pre-wrap;*/
+background-color: #f5f5f5;
+border: 1px solid #ccc;
+border: 1px solid rgba(0, 0, 0, 0.15);
+-webkit-border-radius: 4px;
+-moz-border-radius: 4px;
+border-radius: 4px;
+font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
+font-size: 12px;
+color: #333333;
+white-space: pre;
+white-space: pre-wrap;
+}
