--- a/css/header.css
+++ b/css/header.css
@@ -11,7 +11,7 @@ header {
 	align-items:center;
 	margin-top:50px;
 	font-size:22pt;
-	padding: 18px var(--universal-padding);
+	padding: 18px 0px;
 	box-shadow:0px 4px 4px #a1a1a1;
 	transition: filter 2s;
 	z-index:100;
