--- a/css/root.css
+++ b/css/root.css
@@ -28,7 +28,6 @@ body {
 footer {
 	box-shadow:0px -10px 100px #494949;
 	width:100vw;
-	padding:100px;
 	min-height:50px;
 	background-color:var(--purple);
 	color:white;
@@ -44,3 +43,6 @@ footer > p {
 	font-family:sans serif;
 }
 
+footer > * {
+	pargin:0px 100px;
+}
